完成基本的功能 定时记录位置, 绘制足迹

--- a/project-1/pages/mapDemo/index.wxml
+++ b/project-1/pages/mapDemo/index.wxml
@@ -1,2 +1,28 @@
-<!--index.wxml-->
-<text>index.wxml</text>
+<map id="map" 
+    longitude="{{location.longitude}}" 
+    latitude="{{location.latitude}}" 
+    scale="14" 
+    markers="{{markers}}" 
+    bindmarkertap="markertap" 
+    polyline="{{polyline}}" 
+    bindregionchange="regionchange" 
+    show-location 
+    style="width: 100%; height: 300px;">
+</map>
+
+<view>
+    <text>当前经度: </text> <text>"{{location.longitude}}"</text> 
+</view>
+<view>
+    <text>当前纬度: </text> <text>"{{location.latitude}}"</text> 
+</view>
+<view>
+    <text>当前速度: </text> <text>"{{location.speed}}"</text> 
+</view>
+<view>
+    <text>当前精度: </text> <text>"{{location.accuracy}}"</text> 
+</view>
+<button bindtap="vartureMove">模拟移动轨迹</button>
+<button bindtap="realyMove">真实获取轨迹</button>
+<button bindtap="addPosition">增加记录点</button>
+<button bindtap="stopMove">停止获取轨迹</button>
